@@ -1,3 +1,9 @@
+Mon Apr 16 20:24:11 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
+
+	* tests/Config_Test.cpp (main): Remoted the test_io() function.
+	  Thanks to Jerry Odenwelder <jerry.o@mindspring.com> for
+ 	  confirming this.
+
 Mon Apr 16 16:18:57 2001  Carlos O'Ryan  <coryan@uci.edu>
 
         * ace/config-qnx-rtp.h:
